Changes from Version 0.15-0 to 0.15-1 [xx-Jul-2011]

* Initial degree values set to 1 when conducting NOMAD search (only
  for initial, when nmulti > 1 random valid values are generated)

* Multiple tests for well-conditioned B-spline bases, dynamic
  modification of search boundaries when ill-conditioned bases are
  detected, and detection of non-positive degrees of freedom and full
  column rank of the spline basis (otherwise the penalty
  sqrt(.Machine$double.xmax) is returned during search) - this can
  lead to a significant reduction in the memory footprint

* Added support for generalized B-spline kernel bases (varying order
  generalized polynomial)

* Corrected issue with plot when variables were cast as factors in the
  model formula

* Fixed glitch with return object and i/o when cv="bandwidth" and
  degree=c(0,0,...,0)

* Added tests for pathological cases (e.g. optimize degree and knots
  but set max degree to min degree or max segments to min hence no
  search possible).

* Added argument cv.threshold that uses exhaustive search for simple
  cases where the number of objective function evaluations is less
  than cv.threshold (currently set to 1000 but user can
  set). Naturally exhaustive search is always preferred but often
  unfeasible, so when it is feasible use it.

* Added additional demos for constrained estimation (Du, Parmeter, and
  Racine (2011)), inference, and a sine-based function.

* Substantial reductions in run-time realized.

  - Product kernel computation modified for improved run-time of
  kernel-based cross-validation and estimation.

  - Moved from lsfit to lm.fit and from lm to lm.wfit/lm.fit in
  cv.kernel.spline and cv.factor.spline (compute objective function
  values). Two effects - R devel indicates lm.fit/lm.wfit are more
  robust (confirmed for large number of predictors) and much faster
  cv.kernel.spline function emerges (run-time cut 20-30%).

  - The combined effects of these changes are noticeable. For instance,