@@ -1,5 +1,7 @@
 Changes from Version 0.15-0 to 0.15-1 [xx-Jul-2011]
 
+* Automated detection of ordered/unordered factors implemented
+
 * Initial degree values set to 1 when conducting NOMAD search (only
   for initial, when nmulti > 1 random valid values are generated)
 
